# NetCtl

./: .gitignore  API.md  BUILD.md  BUILD_SYSTEM_READY.md  Cargo.toml  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NEW_FILES_MANIFEST.md  PACKAGING.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_START.md  README.md  RELEASE_BUILD_SUMMARY.md  RELEASE_IMPLEMENTATION_STATUS.md  SECURITY.md  USAGE.md  build-packages.sh  build.sh  start.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-release.yml
backend/: Cargo.toml
backend/ebpf/: Makefile
backend/ebpf/src/: xdp.c  xdp_shaper.c
backend/src/: audit.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  qos.rs  state.rs  timeseries.rs  tui.rs
backend/src/api/: cert_handler.rs  extensions.rs  handlers.rs  lan_config.rs  mod.rs
backend/src/network/: commands.rs  interfaces.rs  mod.rs
backend/src/plugins/: context.rs  logger.rs  manager.rs  mod.rs  plugin.rs
backend/systemd/: netctl.service
ebpf/: Cargo.toml
ebpf/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.css  main.tsx
frontend/src/components/: AuditViewer.tsx  Dashboard.css  Dashboard.tsx  DeviceList.tsx  FlowVisualization.tsx  LANConfig.css  LANConfig.tsx  MetricsGraph.tsx  PolicyBuilder.tsx  QoSPanel.tsx  VLANManager.tsx
frontend/src/hooks/: useMetricsStream.ts
packaging/: Dockerfile.debian  Dockerfile.rpm  PACKAGING_TODOS.md  release.sh
packaging/debian/: control  copyright  postinst  prerm  rules
packaging/docker/: Dockerfile.debian  Dockerfile.rpm  build-packages.sh
packaging/rpm/: netctl.spec
releases/: README.md  v1.0.0.md
