[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NetCtl Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
libbpf-rs = "0.24"
aya = { version = "0.13", features = ["async_tokio"] }
plain = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
